# rockit

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  MANIFEST.in  README.md  TestExamples.m  basic.py  basic_alejandro.py  bounce.py  hello_world.py  pyproject.toml  requirements.txt  run_all.m  run_all.py  scenario_tree.py  setup.py  splines.py  time_opt.py
.binder/: postBuild  requirements.txt
cookbook/: interpolation.m  interpolation.py
docs/: py2notebook.py  template.ipynb
examples/: README.txt  bang_bang.py  bounce.m  bounce.py  bounce_loop.m  bounce_loop.py  car_example.m  car_example.py  car_example_parametric.m  car_example_parametric.py  compare_tunnel_presentation.py  dae.m  dae.py  dae_cartpendulum.m  dae_cartpendulum.py  hello_world.ipynb  hello_world.m  hello_world.py  iterations_plot.py  iterative_learning.py  local_path_calculator.py  matrix_lyapunov.m  matrix_lyapunov.py  motion_planning.m  motion_planning.py  motion_planning_MPC.py  motion_planning_freegrid.m  motion_planning_freegrid.py  motion_planning_hyperplane.m  motion_planning_hyperplane.py  motion_planning_sdf.py  motion_planning_softmax.py  motion_planning_tunnel.m  motion_planning_tunnel.py  motion_planning_waypoints.m  motion_planning_waypoints.py  mpc_example.m  mpc_example.py  multistage_drone_race.py  parametric_time.m  (+15 more)
matlab/: generate.py
misc/: Dockerfile  update_docker.sh
notes/: notes.txt  notes_armin.txt
ocpx/: __init__.py  casadi_helpers.py  direct_collocation.py  direct_method.py  freetime.py  multiple_shooting.py  ocp.py  ocp_multistage.py  ocpx_solution.py  sampling_method.py  solution.py  stage.py  stage_options.py
rockit/: __init__.py  acados_interface.py  casadi_helpers.py  direct_collocation.py  direct_method.py  global_options.py  grouping_techniques.py  multiple_shooting.py  ocp.py  stage.py  (+5 more)
(+75 files in other folders)
